bug(custom-home__why): fixed text being cut off by other elements

--- a/src/components/custom/custom-home-why/custom-home-why.sass
+++ b/src/components/custom/custom-home-why/custom-home-why.sass
@@ -17,12 +17,13 @@
       width: 100%
 
     &:first-of-type
-      @extend .flex-column-center
+      // @extend .flex-column-center
       background-color: $white
       padding: 3rem
 
   &__title
     color: $darkBlue
+    text-align: center
 
   &__sub-title
     line-height: 1.5
